--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <title>Page Title</title>
 </head>
 <body>
+  <h1>We do a little trolling.</h1>
+  <br>
+  <h2>Bruh!</h2>
   <p> Hey guys i already made this stuff then committed to main for some reason. </p>
 </body>
 </html>
