--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello this is a test</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+  <p> Hey guys i already made this stuff then committed to main for some reason. </p>
+</body>
+</html>
